3rd Bootstrap site files

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <!-- Row2-2col; 25% to 75%.  Sit the image to fluid-->
         <div class="row">
                 <div class="col-md-3">
-                    <img src="assets/images/porfilePic.jpg" alt="profile picture of myself" class="img-fluid" >
+                    <img src="assets/images/porfilePic.jpg" alt="profile picture of myself" 
+                    class="img-fluid" >
                 </div>
 
                 <div class="col-md-9">
