--- a/index.html
+++ b/index.html
@@ -51,22 +51,15 @@
                 </div>
 
                 <div class="col-md-9">
-                        <p>I was introduced to computer coding during my 12th grade - 
-                            when I took a computer programing class to fulfil for an 
-                            elective course.  Since then, I have developed interest for 
-                            computer coding.  After high school, I continued to work as a 
-                            project coordinator at Asian Media Access.  After, I obtained 
-                            my associate degree in Medical Office at St. Paul College 
-                            and worked at Heritage Home Health Care.  </p>
-
-                            <p>What am I now? And why am I interested in computer programing?  
-                                What do I hope to get out from this?</p>
-
-                            <p>Hobbies: I am currently teaching Asian dance to students ages 
-                                8-10.  Other fun facts about me are I went on my first 
-                            vacation this summer to Disney World and visited 
-                            the Navi' World, I have two pet birds (budgies), 
-                            and I love indoor plants.</p>
+                    <p>I have an associate degree in Medical Office.  I'm comfortable working in
+                        office settings and I used to work at Heritage Home Health Care.  Prior to
+                        that, I was a project coordinator at Asian Media Access. Currently, I am teaching 
+                        dance to students
+                        ages 8-10 at Iny Asian Dance Theater.</p>  
+        
+                    <p>Other fun facts about me are I went on my first vacation this summer to 
+                        Disney World and visited the Navi' World, I have two pet birds (budgies), and I love indoor plants. 
+                    </p>
                 </div>
     </div>
 
